--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,16 @@
             <groupId>org.deeplearning4j</groupId>
             <artifactId>dl4j-spark</artifactId>
             <version>${dl4j.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>spark-core_2.11</artifactId>
+                    <groupId>org.apache.spark</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>spark-mllib_2.11</artifactId>
+                    <groupId>org.apache.spark</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
